--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
    Pods/YandexMapsMobile/YandexMapsMobile.xcframework/ios-arm64/YandexMapsMobile.framework/YandexMapsMobile
    Pods/YandexMapsMobile/YandexMapsMobile.xcframework/ios-x86_64_arm64-simulator/YandexMapsMobile.framework/YandexMapsMobile
+   Pods/
+   
    
